--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><!--폰트어썸-->
     <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -98,25 +98,104 @@
         cursor: pointer;
         display: none;
     }
+    /* 검색창 */
     #headerSearch{
         height: 52px; width: 50%;
-        /* margin-top: 30px;margin-left: 30px; */
+        padding: 0 0 0 7px;
         border: none;
         border-bottom: solid 2px rgb(75,75,75);
         font-family: 'Noto Sans KR', sans-serif;
         font-size: 23px;
     }
+    #headerSearch:focus{
+        border-bottom-left-radius: 7px;
+        border-bottom-right-radius: 7px;
+    }
     #goLogin{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
         width: 120px; height: 45px;
-        /* margin-left: 30px;
-        padding-left: 12px;
-        padding-bottom: 8px; */
         background: rgb(241,152,128);
         border-style: none;
         border-radius: 30px;
         font-family: 'Noto Sans KR', sans-serif;
         font-size: 17px;
     }
+    #goLogin .fa.fa-sort-down{
+        display: inherit;
+        margin: 0 0 5px 0;
+    }
+    .my_detail_wrap:hover,
+    #goLogin.active:hover+.my_detail_wrap{
+        height: auto;
+        top: 92%;
+        padding: 20px 15px 0;
+        opacity: 1;
+        transition: all .2s;
+    }
+    .my_detail_wrap{
+        position: absolute;
+        padding: 0 15px;
+        overflow: hidden;
+        top: 100%; right: 10px;
+        width: 210px;
+        height: 0;
+        opacity: 0;
+        transition: all .1s;
+    }
+    .my_detail{
+        position: relative;
+        width: 180px;
+        z-index: 100;
+        padding: 13px 10px 0px 11px;
+        border: solid 1px rgb(241,152,128);
+        border-radius: 5px;
+        background-color: rgb(241,152,128);
+        color: white;
+        font-size: 16px;
+        box-shadow: 0 -1px 4px 0 rgb(0 0 0 / 24%);
+    }
+    .my_detail::after{
+        content: "";
+        position: absolute;
+        background: rgb(241,152,128);
+        z-index: -1;
+        width: 15px; height: 15px;
+        top: -8px; left: 60%;
+        transform: rotate(45deg);
+    }
+    .my_detail div{
+        width: 100%;
+        height: 100%;
+        margin: 0 0 10px 0;
+        padding: 10px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    #myp i{
+        margin-right: 5px;
+    }
+    #logOut i{
+        margin: 0 5px 0 5px;
+    }
+    #goCart1{
+        margin: 0 5px 3px 0;
+    }
+    .my_detail div:hover{
+        background-color: #f4744c;
+        box-shadow: 0 1px 4px 0 rgb(0 0 0 / 24%);
+    }
+    .my_detail a{
+        color: white;
+    }
+    .my_detail a:hover{
+        color: white;
+        text-decoration: none;
+    }
+    /* style="font-size: 35px; margin: 0 0px;" */
+
+
 
     #searchChart{
         border-radius: 10px;
@@ -201,8 +280,22 @@
 
                     <!-- 로그인버튼 -->
                     <button id="goLogin" class="btn btn-primary" type="button"><strong>로그인/가입</strong></button>
-                    <!-- 로그아웃 버튼 -->
-                    <i class="fa fa-sign-out fa-2x" id="logOut" title="로그아웃"></i>
+                    
+                    <div class="my_detail_wrap">
+                        <div class="my_detail">
+                            <div id="myp"><a href="../myPage/mainMyPage.html"><i class="fas fa-chalkboard-teacher"></i> 마이페이지</a></div>
+                            <!-- <div><a href="../admin/mainAdmin.html"><i class="fas fa-file-signature"></i> 관리자페이지</a></div> -->
+                            <div class="cart">
+                                <a href="../store/cart.html">
+                                <svg id="goCart1" xmlns="http://www.w3.org/2000/svg" width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none">
+                                    <path d="M16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11M5 9H19L20 21H4L5 9Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                </svg>
+                                장바구니
+                                </a>
+                            </div>
+                            <div id="logOut"><i class="fas fa-sign-out-alt"></i> 로그아웃</div>
+                        </div>
+                    </div>
                     
                 </div>
 
