--- a/view/commons/menuStore.html
+++ b/view/commons/menuStore.html
@@ -1,25 +1,124 @@
-<nav class="navbar navbar-light navbar-expand-md">
-    <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span
-                class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse justify-content-center" id="navcol-2"
-            style="border-bottom: 2px solid rgb(150,150,150);font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
-            <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0);">
-                <li class="nav-item"><a class="nav-link" href="#"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;margin-left: 0;">홈</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">인기상품</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(0,0,0);margin-right: 21px;">가구</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">조명</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"
-                        style="border-bottom-color: rgb(0,0,0);background: #ffffff;color: rgb(0,0,0);margin-right: 20px;">홈데코</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(0,0,0);margin-right: 20px;">패브릭</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 190px;">수납정리</a></li>
-            </ul>
-        </div>
+<style>
+/* 반응형 네비바 밑줄 */
+@media (min-width: 767.98px) {
+    .navbar-expand-md>.container-fluid{
+        border-bottom: 2px solid rgb(150,150,150);
+    }
+}
+#st .nav_a{
+    min-width: 80px;
+    color: rgb(0,0,0);
+    font-size: 19px;
+    margin-right: 20px;
+    margin-left: 0;
+}
+#st .navbar-nav li:first-of-type a{
+    min-width: 30px;
+}
+#st .container{
+    position: relative;
+}
+#st .submenu_wrap{
+    position: absolute;
+    top: 25px; left: 20px;
+    padding: 5px;
+    z-index: 10;
+    background-color: transparent;
+    overflow: hidden;
+    height: 0;
+    opacity: 0;
+    transition: all .3s;
+}
+#navcol-2 .submenu_wrap:hover,
+#navcol-2 ul:hover+.submenu_wrap{
+    top: 45px;
+    height:auto;
+    opacity: 1;
+    transition: all .3s;
+}
+#st .submenu_box{
+    margin: 5px;
+    border: solid 1px #ededed;
+    height: 160px;
+    width: 700px;
+    border-radius: 8px;
+    background-color: rgb(255 255 255 / 94%);
+    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
+    z-index: 10;
+}
+#st .submenu_box .figure{
+    margin: 15px 20px 30px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 17px;
+}
+#st .submenu_box .figure:hover strong{
+    color: #f4744c;
+    font-weight: 900;
+}
+#st .submenu_box .figure img{
+    width: 100px;
+}
+#st .submenu_box .figure a:hover{
+    text-decoration: none;
+}
+</style>
+<nav id="st" class="navbar navbar-light navbar-expand-md">
+    <div class="container-fluid" style="padding-bottom: 5px;">
+        <div class="container">
+
+            <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2">
+                <span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- 네비바 -->
+            <div class="collapse navbar-collapse" id="navcol-2" style="font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
+                <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0); margin-left: 20px;">
+                    <li class="nav-item"><a class="nav-link nav_a" href="../../index.html">홈</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#">인기상품</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#">가구</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#">조명</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#">홈데코</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#">패브릭</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#">수납정리</a></li>
+                </ul>
+            
+                <!-- 메뉴 호버 -->
+                <div class="submenu_wrap d-md-block d-none active">
+                    <div class="submenu_box">
+                        <div class="row">
+                            <figure class="figure">
+                                <a href="#">
+                                    <img src="../../assets/img/가구.png"><figcaption class="figure-caption"><strong>가구</strong></figcaption>
+                                </a>
+                            </figure>
+                            <figure class="figure">
+                                <a href="#">
+                                    <img src="../../assets/img/조명.png"><figcaption class="figure-caption"><strong>조명</strong></figcaption>
+                                </a>
+                            </figure>
+                            <figure class="figure">
+                                <a href="#">
+                                    <img src="../../assets/img/데코.png"><figcaption class="figure-caption"><strong>홈데코</strong></figcaption>
+                                </a>
+                            </figure>
+                            <figure class="figure">
+                                <a href="#">
+                                    <img src="../../assets/img/패브릭.png"><figcaption class="figure-caption"><strong>패브릭</strong></figcaption>
+                                </a>
+                            </figure>
+                            <figure class="figure">
+                                <a href="#">
+                                    <img src="../../assets/img/수납.png"><figcaption class="figure-caption"><strong>수납정리</strong></figcaption>
+                                </a>
+                            </figure>
+                            
+                        </div>
+                    </div>
+                </div> <!--메뉴 호버 끝-->
+            </div> <!-- 네비바 끝 -->
+
+        </div><!-- 컨테이너 끝 -->
+
     </div>
 </nav>
