--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -28,7 +28,7 @@
           border: none;
           color: white;
           padding: 16px 32px;
-          float: right;
+
           text-align: center;
           text-decoration: none;
           display: inline-block;
@@ -282,6 +282,7 @@
                     <span class="comment-feed-header-count">6</span></h1>
                     <!-- 댓글작성 폼 -->  
                     <form class="comment-feed-form" id="comment-feed-form" method="POST" enctype="multipart/form-data" onsubmit="return false;">
+
                         <div class="comment-feed-form-user">
                             <img src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=36" 
                             srcSet="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=72 1.5x
@@ -296,6 +297,7 @@
                         <input type="hidden" id="userSeq" name="userSeq" >
                         <input type="hidden" id="questionSeq" name="questionSeq" >
                         <input type="hidden" name="qcFileName" value="123">
+
                         <div class="comment-feed-form-input">
                             <div class="comment-feed-form-content">
                                 <div class="comment-content-input">
@@ -315,6 +317,7 @@
                                 <button class="comment-feed-form-submit" value="등록" type="button">등록</button>
                             </div>
                         </div>
+
                     </form>
 
                         <ul class="comment-feed-list" id="comment-feed-list" style="list-style: none;">
@@ -322,6 +325,7 @@
                             <li class="comment-feed-list-item">
                                 <div class="comment-feed-item">
                                     <p class="comment-feed-item-content" >
+                                        <input type="hidden" value="9909" id="1123" name="1223">
                                         <a href="#userprofile" class="comment-feed-item-content-author-name" >
                                         <img class="comment-feed-item-content-author-image" src="" onerror="this.src='../image/avatar.png'">    
                                         <span>userid</span>
@@ -329,14 +333,11 @@
                                         <span>댓글내용인디용?</span>
                                     </p>
                                     <footer class="comment-feed-item-footer">
-                                       
                                         <time class="comment-feed-item-footer-time">10분전</time>
-                                        
-                                        <button>좋아요</button>
-                                        
-                                        <button>답글달기</button>
-                                        
-                                        <span style="color: gainsboro"><a href="#" style="">신고</a></span>
+                                        <button class="">좋아요</button>
+                                        <!-- <button class="comment-feed-reply">답글달기</button> -->
+                                        <button class="">답글달기</button>
+                                        <span style="color: gainsboro"><a href="#" >신고</a></span>
                                     </footer>
                                 </div>
                             </li>
@@ -371,7 +372,7 @@
         </div>
     </div>
 
-    <div class="col-xl-2" style="">
+    <div class="col-xl-2" >
             <div class="question-detail-sidebar" >
                 <div class="sidebar-header">
                     <div class="sidebar-header-writer">
@@ -393,7 +394,7 @@
                 </div>
                 <hr>
                 <div class="sidebar-footer">
-                    <h3>궁금한게 있으신가요?</h3>
+                    <h3 style="font-size: 20px; font-weight: 500;">궁금한게 있으신가요?</h3>
                     <button class="q-button">질문하러가기</button>
                 </div>
             </div>
@@ -433,9 +434,8 @@ $(document).ready(function(){
             type:"get",
             data:{questionSeq:seq},
             success:function(){
-                alert('questionReadCountUp 성공');
+                //alert('questionReadCountUp 성공');
                 //console.log("조회수 증가?");
-                
             }, error:function(){
                 alert('questionReadCountUp 실패');
             }
@@ -446,23 +446,19 @@ $(document).ready(function(){
     function timeForToday(value) {
         const today = new Date();
         const timeValue = new Date(value);
-
         const betweenTime = Math.floor((today.getTime() - timeValue.getTime()) / 1000 / 60);
         if (betweenTime < 1) return '방금 전';
         if (betweenTime < 60) {
             return `${betweenTime}분 전`;
         }
-
         const betweenTimeHour = Math.floor(betweenTime / 60);
         if (betweenTimeHour < 24) {
             return `${betweenTimeHour}시간 전`;
         }
-
         const betweenTimeDay = Math.floor(betweenTime / 60 / 24);
         if (betweenTimeDay < 365) {
             return `${betweenTimeDay}일 전`;
         }
-
         return `${Math.floor(betweenTimeDay / 365)}년 전`;
     }
     
@@ -475,10 +471,29 @@ $(document).ready(function(){
         day = day >= 10 ? day : '0' + day;          //day 두자리로 저장
         return  year + '-' + month + '-' + day;       //'-' 추가하여 yyyy-mm-dd 형태 생성 가능
     }
+
+    // 넘어온 값이 빈값인지 체크합니다. 
+    // !value 하면 생기는 논리적 오류를 제거하기 위해 
+    // 명시적으로 value == 사용 
+    // [], {} 도 빈값으로 처리 
+    var isEmpty = function(value){ 
+    if( value == "" || value == null || value == undefined || ( value != null && typeof value == "object" && !Object.keys(value).length ) ){
+        return true
+        } else { 
+        return false 
+        } 
+    }
     
 
     //유저시퀀스 부여하기
-    $('#userSeq').val(sessionId.userSeq);
+    if(isEmpty(sessionId)==true){
+        alert('로그인해라');
+        location.href="../login/login.html";
+        //    $('#userSeq').val(0);
+    } else {
+        $('#userSeq').val(sessionId.userSeq);
+    }
+    
     
     //질문글의 댓글 수 카운팅해서 가져오기
     var qccount;
@@ -488,7 +503,7 @@ $(document).ready(function(){
     data:{questionSeq:seq},
     async : false,
     success:function(data){
-        alert('questionCommentCount 성공');
+        //alert('questionCommentCount 성공');
         qccount = data;
         if(qccount == 0 || qccount == null || qccount=='0' || typeof(qccount) == "undefined"){
             qccount = 0;
@@ -499,8 +514,6 @@ $(document).ready(function(){
         alert('questionCommentCount 실패');
     }
     });
-
-   
 
     //해당 글에 대한 내용 뿌리기
     $.ajax({
@@ -515,7 +528,7 @@ $(document).ready(function(){
             //alert(qdate);
             var date3 = getFormatDate(date2);
 
-            alert('detail ajax 성공');
+            //alert('detail ajax 성공');
             //alert(JSON.stringify(list));
             console.log(JSON.stringify(list));
             $('.question-detail-title').text(list.questionTitle);
@@ -539,17 +552,18 @@ $(document).ready(function(){
         }
 
     });
+
     
+
     //해당 글에 대한 댓글 내용 뿌리기
     $.ajax({
         url:"http://localhost:3000/questionCommentList",
         type:'post',
         data:{questionSeq:seq},
         success:function(list){
-            alert('CommentList ajax 성공');
+            //alert('CommentList ajax 성공');
             console.log(JSON.stringify(list));
             //alert(JSON.stringify(list));
-
             $.each(list, function(i, val){
                 if(val.qcDel == 0){
                 var pfname = val.profileName;
@@ -565,14 +579,20 @@ $(document).ready(function(){
                     apple = '';
                 }
 
-                let app = "<li class='comment=feed-list-item'>"
+                if(isEmpty(val.qcSeq) == false){//onclick='commentreply(" + val.qcSeq + ")'
+                    var ripple = "<button class='cmtreply' type='button'>답글달기" + "</button>"
+                } else {
+                    ripple = '';
+                }
+                
+                let app = "<li class='comment-feed-list-item'>"
                             + "<div class='comment-feed-item'>"
                                 + "<div class='comment-feed-item-content'>"
                                     + "<a href='#' class='comment-feed-item-content-author-name'>"
                                         + "<img class='comment-feed-item-content-author-image' src=' " 
                                         + pfname
                                         + "' >"
-                                        + "<span>" + val.nickName + "</span>"
+                                        + "<span class='questioncommentwriter'>" + val.nickName + "</span>"
                                     + "</a>"
                                     + "<span>"
                                     + val.qcContent
@@ -581,18 +601,23 @@ $(document).ready(function(){
                                 + "<footer class='comment-feed-item-footer'>"
                                     + "<time class='comment-feed-item-footer-time'>" + timeForToday(val.qcRegDate) + "</time>"    
                                     + "<button> 좋아요 </button>"
-                                    + "<button> 답글달기 </button>"
+                                    //+ "<button class='comment-feed-reply' >답글달기</button>"
+                                    //+ "<button onclick='commentreply(" + val.qcSeq + ")' >답글달기" + "</button>"
+                                    + ripple
                                     + "<span>"
                                         + "<a href='#'>신고</a>"
                                     + "</span>"
                                     + apple
+                                    + "<input type='hidden' value='" + val.qcSeq + "' class='hiddenseq'>"
                                 + "</footer>"
+                                
                             + "</div>"
                         + "</li>"
 
                 $("#comment-feed-list").append(app);
+
                 } else {
-                    let app = "<li class='comment=feed-list-item'>"
+                    let app = "<li class='comment-feed-list-item'>"
                             + "<div class='comment-feed-item'>"
                                 + "<div class='comment-feed-item-content'>"
                                     + "<p href='none' class='comment-feed-item-content-nothing'>"
@@ -622,39 +647,124 @@ $(document).ready(function(){
           type: 'post',
           data : form,
           success:function(list){
-            alert('questionComment ajax성공');
+            //alert('questionComment ajax성공');
             rejax();
           }, error:function(list){
             alert('questionComment ajax실패');
           }
-        })
+        });
     });
+
+    //$(document).on("click", "#_seq", function () { 
+   //var tseq=$(this).attr('value');
+     $(document).on('click','.comment-feed-item-footer .cmtreply', function(){
+        
+        alert($(this).val() + '디스발');
+        var reqseq = $(this).parents('.comment-feed-list-item').find("input[type='hidden']").val();
+        //alert($('input[type="hidden"]').val());
+        alert(reqseq);
+        //console.log($('input[type="hidden"]').val());
+        
+        
+            let ripple  
+                    = "<form class='comment-reply'>"
+                        + "<div class='comment-reply-content-form'>"
+                            + "<div class='comment-reply-content-input'>"    
+                                + "<input class='comment-reply-input-text' name='qcContent' id='questionCommentreply' style='outline: none;' placeholder='" + $('.questioncommentwriter').val + "'"
+                            + "</div>"
+                            + "<div>"
+                                + "<button>등록</button>"    
+                            + "</div>"
+                        + "</div>"
+                    + "</form>"
+
+            $(this).parents('.comment-feed-item').append(ripple);
+            //$('.comment-feed-item').append(ripple);
+        
+            
+        
+     });
+
+    
+    
+    
+
+}); // $(document).ready(function() 끝
+
 
     //질문과답변 댓글 삭제하기
     function commentdel(commentseq){
         $.ajax({
             url:"http://localhost:3000/questionCommentdel",
             type:"get",
-            data : {qcSeq:seq},
+            data : {qcSeq:commentseq},
             success:function(){
                 alert('questionCommentdel ajax성공');
                 rejax();
             }, error:function(){
                 alert('questionCommentdel ajax실패');
             }
-        })
+        });
     }
 
+
+
+    //질문과답변 댓글에 덧글달기
+    
+
+/*
+    function commentreply(commentseq){
+        //alert('답글달기 버튼은 눌림?');
+        alert(commentseq);
+        alert($(".commentseq").val());
+        if(commentseq == $(".commentseq").val()){
+            alert('이프문들어옴');
+            let ripple  
+                    = "<form class='comment-reply'>"
+                        + "<div class='comment-reply-content-form'>"
+                            + "<div class='comment-reply-content-input'>"    
+                                + "<input class='comment-reply-input-text' name='qcContent' id='questionCommentreply' style='outline: none;' placeholder='" + $('.questioncommentwriter').val + "'"
+                            + "</div>"
+                            + "<div>"
+                                + "<button>등록</button>"    
+                            + "</div>"
+                        + "</div>"
+                    + "</form>"
+
+            $('.comment-feed-item').append(ripple);
+
+        } else {
+            alert('오류');
+        }
+
+    }
+*/
     //ajax 후 새로고침
     function rejax(){  
         location.reload();
     }
 
+/*
+$(document).on('click','.comment-feed-reply', function(qcSeq) {
+        alert('답글달기 버튼은 눌림?');
 
+        if(qcSeq == $("#commentseq")){
+            let ripple  
+                    = "<form class='comment-reply'>"
+                        + "<div class='comment-reply-content-form'>"
+                            + "<div class='comment-reply-content-input'>"    
+                                + "<input class='comment-reply-input-text' name='qcContent' id='questionCommentreply' style='outline: none;' placeholder='" + $('.questioncommentwriter').val + "'"
+                            + "</div>"
+                            + "<div>"
+                                + "<button>등록</button>"    
+                            + "</div>"
+                        + "</div>"
+                    + "</form>"
 
-
-});
-
+            $('.comment-feed-item').append(ripple);
+        }
+})
+*/
    
 
 </script>
